; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cse.c_cse_change_cc_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cse.c_cse_change_cc_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.change_cc_mode_args = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i8*)* @cse_change_cc_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cse_change_cc_mode(i64* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.change_cc_mode_args*, align 8
  store i64* %0, i64** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.change_cc_mode_args*
  store %struct.change_cc_mode_args* %8, %struct.change_cc_mode_args** %6, align 8
  %9 = load i64*, i64** %4, align 8
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %44

12:                                               ; preds = %2
  %13 = load i64*, i64** %4, align 8
  %14 = load i64, i64* %13, align 8
  %15 = call i64 @REG_P(i64 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %44

17:                                               ; preds = %12
  %18 = load i64*, i64** %4, align 8
  %19 = load i64, i64* %18, align 8
  %20 = call i64 @REGNO(i64 %19)
  %21 = load %struct.change_cc_mode_args*, %struct.change_cc_mode_args** %6, align 8
  %22 = getelementptr inbounds %struct.change_cc_mode_args, %struct.change_cc_mode_args* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = call i64 @REGNO(i64 %23)
  %25 = icmp eq i64 %20, %24
  br i1 %25, label %26, label %44

26:                                               ; preds = %17
  %27 = load i64*, i64** %4, align 8
  %28 = load i64, i64* %27, align 8
  %29 = call i64 @GET_MODE(i64 %28)
  %30 = load %struct.change_cc_mode_args*, %struct.change_cc_mode_args** %6, align 8
  %31 = getelementptr inbounds %struct.change_cc_mode_args, %struct.change_cc_mode_args* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = call i64 @GET_MODE(i64 %32)
  %34 = icmp ne i64 %29, %33
  br i1 %34, label %35, label %44

35:                                               ; preds = %26
  %36 = load %struct.change_cc_mode_args*, %struct.change_cc_mode_args** %6, align 8
  %37 = getelementptr inbounds %struct.change_cc_mode_args, %struct.change_cc_mode_args* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 8
  %39 = load i64*, i64** %4, align 8
  %40 = load %struct.change_cc_mode_args*, %struct.change_cc_mode_args** %6, align 8
  %41 = getelementptr inbounds %struct.change_cc_mode_args, %struct.change_cc_mode_args* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = call i32 @validate_change(i32 %38, i64* %39, i64 %42, i32 1)
  store i32 -1, i32* %3, align 4
  br label %45

44:                                               ; preds = %26, %17, %12, %2
  store i32 0, i32* %3, align 4
  br label %45

45:                                               ; preds = %44, %35
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i64 @REG_P(i64) #1

declare dso_local i64 @REGNO(i64) #1

declare dso_local i64 @GET_MODE(i64) #1

declare dso_local i32 @validate_change(i32, i64*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
